src/test/test-models/bad/reserved/static_assert.stan
data {
  real static_assert;
}
model {
}
